# linux-api-course

./: CMakeLists.txt  README.md  biz_error.c  biz_error.h  biz_handler.c  biz_handler.h  main.c
1. Bizz Buzz/: CMakeLists.txt  README.md  biz_error.c  biz_handler.c  biz_handler.h  errors_vh.c  errors_vh.h  main.c
1. Bizz Buzz/include/: sys_err.h
1. Bizz Buzz/src/: biz_err.c  biz_err.h  biz_handler.c  biz_handler.h  main.c  main.cpp  sys_err.c
2. Сonveyor/: CMakeLists.txt  README.md
2. Сonveyor/src/: conv_err.c  conv_err.h  conv_handler.c  conv_handler.h  main.c  sys_err.c
3. Signals/: CMakeLists.txt  README.md
3. Signals/error_src/: sys_err.c  sys_err.h
3. Signals/interaction/: data_manip.c  data_manip.h  settings.h
3. Signals/receiver/: main.c  rec_err.c  rec_err.h  rec_handler.c  rec_handler.h
3. Signals/transmitter/: main.c  trans_err.c  trans_err.h  trans_handler.c  trans_handler.h  trans_main.c
4. Shared stack/: CMakeLists.txt  README.md
4. Shared stack/error_src/: ename.h
4. Shared stack/include/: stack.h
4. Shared stack/stack_src/: main.c  main1.c  main2.c  stack.c
5. Daemon-backuper/: CMakeLists.txt  README.md
5. Daemon-backuper/daemon_ctl/: backuperd_ctl.c
5. Daemon-backuper/daemon_src/: args_handling.c  backuper.c  daemon.c  main.c
5. Daemon-backuper/hash_table/: hash_table.c  hash_table.h
5. Daemon-backuper/include/: args_handling.h  backuper.h  daemon.h
